--- a/src/views/home/home.pug
+++ b/src/views/home/home.pug
@@ -1,6 +1,6 @@
 .home
   h1 {{ title }}
-  p(v-hidden="false") {{ testText }}
+  p(v-show="false") {{ testText }}
   form.form-area()
     el-row
       el-col(:span="10")
