--- a/src/views/home/home.scss
+++ b/src/views/home/home.scss
@@ -1,21 +1,21 @@
 .home {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 
   .form-area {
     margin: auto;
-    width: 60%;
+    width: 90%;
     .el-col {
       line-height: 40px;
       margin-bottom: 20px;
 
       .el-input {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
       }
     }
 
     .el-button {
-      font-size: 1.2rem;
-      width: 20%;
+      font-size: 1.1rem;
+      padding: 10px 30px;
     }
   }
 }
