feat:画像を選択してプレビューを表示する

--- a/src/views/profileImage/profile_image.pug
+++ b/src/views/profileImage/profile_image.pug
@@ -1,2 +1,4 @@
 .profile-image
-  input(type="file", accept=".png, .jpg, .jpeg")
+  .title Upload Image
+  img(:src="uploadImage")
+  input(type="file", accept="image/png, image/jpg, image/jpeg", @change="selectedFile($event)")
